# wasmhal

./: .gitignore  Cargo.toml  LICENSE  README.md  WASM_GUIDE.md  component.toml  demo.sh
.github/workflows/: ci.yaml
example-add-user/: Cargo.toml
example-add-user/src/: bindings.rs  lib.rs
example-add-user/wit/: world.wit
example-attestation-guest/: Cargo.toml
example-attestation-guest/src/: bindings.rs  lib.rs
examples/: basic_usage.rs  enforcement_demo.rs  entity_policies.yaml  modular_interfaces.rs  wasmtime_linker.rs
hal-runtime/: Cargo.toml
hal-runtime/src/: host_impl.rs  lib.rs  main.rs  wit_impl.rs
src/: capabilities.rs  clock.rs  communication.rs  crypto.rs  error.rs  events.rs  gpu.rs  interfaces.rs  ita.rs  lib.rs  platform.rs  providers.rs  random.rs  resources.rs  sockets.rs  storage.rs  tdx_quote.rs
src/enforcement/: audit.rs  engine.rs  mod.rs  policy.rs  wrappers.rs
tests/: integration_tests.rs  tdx_all_interfaces_test.rs  tdx_integration_test.rs
wit/: README.md  deps.toml  world.wit
wit-modular/: README.md  attestation.wit  capabilities.wit  clock.wit  communication.wit  complete.wit  crypto.wit  deps.toml  events.wit  gpu.wit  platform.wit  random.wit  resources.wit  sockets.wit  storage.wit
