[package]
name = "example-add-user"
version = "0.1.0"
edition = "2024"
description = "Example WASM service for LUND demo - /add_user endpoint with HAL integration"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "elastic:add-user-service"

[package.metadata.component.target]
world = "add-user-service"

[package.metadata.component.target.dependencies]
"elastic:platform" = { path = "wit/deps/platform.wit" }
"elastic:crypto" = { path = "wit/deps/crypto.wit" }
"elastic:storage" = { path = "wit/deps/storage.wit" }
"elastic:clock" = { path = "wit/deps/clock.wit" }
"elastic:random" = { path = "wit/deps/random.wit" }
